--- a/serverless.yml
+++ b/serverless.yml
@@ -9,7 +9,7 @@ provider:
   stage: ${env:STAGE}
   region: us-east-1
   memorySize: 1024
-  timeout: 25
+  timeout: 30
   iamRoleStatements:
   - Effect: "Allow"
     Action:
@@ -24,20 +24,14 @@ provider:
     Resource: "${env:ARN_QUEUES}"
 
 functions:
-  hello:
-    handler: handler.hello
+  start:
+    handler: handler.start
     events:
       - http:
           path: /
           method: get
-  imageResize:
-    handler: handler.imageResize
-    events:
-      - http:
-          path: /imageResize
-          method: get
   pushToSqs:
-    handler: sender.pushToSqs
+    handler: senderSqs.pushToSqs
     events:
       - http:
           path: /push-sqs
@@ -51,11 +45,11 @@ functions:
               - MyQueue
               - Arn              
 package:
-      exclude:
+      include:
         - node_modules/**
 resources:
   Resources:
     MyQueue:
       Type: "AWS::SQS::Queue"
       Properties:
-        QueueName: "Queue"                
+        QueueName: "${env:NAME_SQS}"                
